--- a/templates/persons/create_person.html
+++ b/templates/persons/create_person.html
@@ -65,8 +65,8 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="phone" class="form-label">Телефон</label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="+7(XXX)XXX-XX-XX">
-                        <div class="form-text">Формат: +7(XXX)XXX-XX-XX</div>
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="89123456789">
+                        <div class="form-text">Введите российский номер (8 или 7), автоматически форматируется в +7(XXX)XXX-XX-XX</div>
                     </div>
                 </div>
                 
